5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2499.log
== TEST (2019-05-10 12:53:46) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 0.0
cont = 0

while (n < k):
	n = n + (n/fatorial(cont) 
	cont = cont+1
print(round(n,8))
-- ERROR:
File "XXXX", line 9
    cont = cont+1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:54:19) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 1.0
cont = 0

while (n < k):
	n = n + (n/fatorial(cont) 
	cont = cont+1
print(round(n,8))
-- ERROR:
File "XXXX", line 9
    cont = cont+1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:54:30) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 1.0
cont = 0

while (n < k):
	n = n + (n/fatorial(cont))
	cont = cont+1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (n/fatorial(cont))
NameError: name 'fatorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:54:35) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 0.0
cont = 0

while (n < k):
	n = n + (n/fatorial(cont))
	cont = cont+1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (n/fatorial(cont))
NameError: name 'fatorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:54:59) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 0.0
cont = 0

while (n < k):
	n = n + (n/(fatorial(cont)))
	cont = cont+1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (n/(fatorial(cont)))
NameError: name 'fatorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:55:07) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 0.0
cont = 0

while (n < k):
	n = n + (n/(factorial(cont)))
	cont = cont+1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (n/(factorial(cont)))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:55:10) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 0.0
cont = 0

while (n < k):
	n = n + (n/(factorial(cont)))
	cont = cont+1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (n/(factorial(cont)))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:55:33) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 1.0
cont = 0

while (n < k):
	n = n + (n/(factorial(cont)))
	cont = cont+1
print(round(n,8))
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:56:15) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 1.0
cont = 1

while (n < k):
	n = n + (n/(factorial(cont)))
	cont = cont+1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (n/(factorial(cont)))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:56:57) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 1.0
cont = 1

while (n < k):
	n = n + (1.0/factorial(cont))
	cont = cont+1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (1.0/factorial(cont))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:57:40) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
n = 1.0
cont = 1

while (n < k):
	n = n + (1.0/factorial(cont))
	cont = cont + 1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = n + (1.0/factorial(cont))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:57:53) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 1.0
cont = 1

while (n < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (n < k):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:58:11) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 1.0
cont = 1

while (cont < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(n,8))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:58:19) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 1.0
cont = 1

while (cont < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 12:58:45) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 1.0
cont = 1

while (cont < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(e,8))
-- EXECUTION TIME:
0.134936
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:00:44) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 1.0
cont = 0

while (cont < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(e,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:00:45) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 1.0
cont = 0

while (cont < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(e,8))
-- EXECUTION TIME:
0.1197
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
3.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
3.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
3.71666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:01:17) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 0.0
cont = 0

while (cont < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:01:19) 
-- CODE:
from math import *

k = int(input("Digite o numero natural: "))
e = 0.0
cont = 0

while (cont < k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
print(round(e,8))
-- EXECUTION TIME:
0.143146
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
